horizontal scroll fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.full-height{
+    height: 100vh;
+}
+
+
 h1,
 h2,
 h3,
@@ -87,6 +97,11 @@ p {
 
 html, body {
     min-height: 100vh;
+}
+
+
+.darkmode{
+    background-color: rgb(33, 33, 33);
 }
 
 .custombackground {
